added nav bar to index and added a bit of tweaking to its css

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,8 @@
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Cutive&display=swap');
+
+
+.navbar {
+  font-family: 'Cutive', serif;
+  border-radius: 0;
+}
