--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -4,5 +4,7 @@
 
 .navbar {
   font-family: 'Cutive', serif;
-  border-radius: 0;
+  box-shadow: 0px 1px 3px #2a2a2a;
+  background: image_url('binding_dark.png');
 }
+
