--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,10 +1,43 @@
 @import "bootstrap";
-@import url('https://fonts.googleapis.com/css?family=Cutive&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Kodchasan:400,700|Stylish&display=swap');
 
+h1, h2, h3, h4, h5, h6, .navbar {
+  margin: 0;
+}
 
 .navbar {
-  font-family: 'Cutive', serif;
+  font-family: 'Kodchasan', sans-serif;
   box-shadow: 0px 1px 3px #2a2a2a;
   background: image_url('binding_dark.png');
 }
 
+.hero {
+  background: image_url('hero.jpg') no-repeat bottom center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 450px;
+  box-shadow: 0px 3px 8px #2a2a2a;
+}
+
+.frosty {
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+}
+
+.frosty h1 {
+  font-family: 'Kodchasan', sans-serif;;
+  font-weight: 100;
+  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+}
+
+.frosty h2 {
+  font-family: 'Kodchasan', sans-serif;;
+  font-weight: 200;
+  text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
+}
+
+.btn {
+  border-radius: 0;
+}
