--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,10 +1,13 @@
 @import "bootstrap";
-@import url('https://fonts.googleapis.com/css?family=Kodchasan:400,700|Stylish&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Kodchasan:400,700|Poppins:400,700&display=swap');
 h1, h2, h3, h4, h5, h6, .navbar {
   margin: 0;
 }
 
+body {
+  background:image_url('dust_scratches.png');
+  font-family: 'Poppins', sans-serif;
+}
 .navbar {
   font-family: 'Kodchasan', sans-serif;
   box-shadow: 0px 1px 3px #2a2a2a;
@@ -40,4 +43,10 @@ h1, h2, h3, h4, h5, h6, .navbar {
 
 .btn {
   border-radius: 0;
+}
+
+.feature {
+  width: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
