--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,19 @@
         </div>
       </div>
     </nav>
+    <% if notice.present? %>
+      <div class="alert alert-info alert-dismissible fade show" role="alert" id="alertbanner"><%= notice %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        </button>
+      </div>
+    <% end %>
+    <% if alert.present? %>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert" id="alertbanner"><%= alert %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        </button>
+      </div>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
