--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -30,7 +30,7 @@ body {
 }
 
 .frosty h1 {
-  font-family: 'Kodchasan', sans-serif;;
+  font-family: 'Kodchasan', sans-serif;
   font-weight: 100;
   text-shadow: rgba(0, 0, 0, 0.95) 1px 1px;
 }
@@ -49,4 +49,24 @@ body {
   width: 100%;
   padding-left: 5%;
   padding-right: 5%;
+}
+
+.booyah-box {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.booyah-box h2, .booyah-box h1 {
+  margin: 10px;
+}
+
+#avatar {
+  text-align: center;
 }
