added student view page for courses and added link to nav bar and header image

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,7 +8,7 @@
     <br />
     <h2>I'm a dreamer, JP.</h2>
     <br />
-    <%= link_to 'Learn More', '#', class: 'btn btn-outline-light' %>
+    <%= link_to 'Learn More', courses_path, class: 'btn btn-outline-light' %>
     <br /><br />
   </div>
 </div>
