--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,7 +2,8 @@
 
 <div class="booyah-box col-10 offset-1">
   <h1><%= @course.title %></h1>
-   <%= image_tag @course.image, class: 'img-fluid' %>
+  <%= image_tag @course.image.url, class: 'img-fluid' %>
+   
   <br />
   <div class="row">
     <div class="col-sm-4 col-12 text-center">
@@ -19,6 +20,8 @@
 
     <div class="col-sm-8 col-12">
       <%= @course.description %>
+
+
     </div>
   </div>
   <div class="col-12">
