--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -13,6 +13,13 @@ body {
   font-family: 'Kodchasan', sans-serif;
   box-shadow: 0px 1px 3px #2a2a2a;
   background: image_url('binding_dark.png');
+  font-weight: 200;
+}
+
+.navbar-inverse a.navbar-brand {
+  font-family: 'Kodchasan', sans-serif;
+  font-weight: 100;
+  color: white;
 }
 
 .hero {
